updated liri.js with npms

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<nav class="navbar navbar-nav">
 				<div class="container">
 					<div class="navbar-header">
-	 					<h1>Week-5 Games</h1>
+	 					<h1>Week-10 nodejs</h1>
 					</div>
 				  
 				</div>
@@ -27,9 +27,8 @@
 		<p></p>
 		<div class="row main">
 			<div class="btn-group" role="group">
-  				<a type="button" class="btn btn-default" href="week7/trainSchedule.html" alt="Train Schedule">Train Schedule</a>
-  				<a type="button" class="btn btn-default" href="week7/rock PaperScissors.html" alt="Rock Paper Scissors">Rock Paper Scissors</a>
-			</div>
+			<a type="button" class="btn btn-default"  href = "C:\WINDOWS\system32\cmd.exe"> Open cmd promt</a>
+ 			</div>
 		</div>
 	</div>
 </body>
