--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/styles.css">
-	<title>Week7 Games</title>
+	<title>Week10 Games</title>
+	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+	
 </head>
 <body>
 	<header class="bgimage">
@@ -29,6 +31,7 @@
 			<div class="btn-group" role="group">
 			<a type="button" class="btn btn-default"  href = "C:\WINDOWS\system32\cmd.exe"> Open cmd promt</a>
  			</div>
+ 			<div id="output">,/div>
 		</div>
 	</div>
 </body>
