--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="btn-group" role="group">
 			<a type="button" class="btn btn-default"  href = "C:\WINDOWS\system32\cmd.exe"> Open cmd promt</a>
  			</div>
- 			<div id="output">,/div>
+ 			<div id="output"></div>
 		</div>
 	</div>
 </body>
